--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "browser-sync": "^2.26.12",
+    "browser-sync-webpack-plugin": "^2.2.2",
     "compression-webpack-plugin": "^2.0.0",
     "cross-env": "^7.0",
     "eslint": "^5.16.0",
